# SPLN2024

./: README.md
TPC1/: word_freq.py
TPC2/: Readme.md  pyproject.toml
TPC2/word_freq/: __init__.py
TPC3/: README.md  jjcli-0.1.23-py2.py3-none-any.whl  makepyproject-0.0.1-py3-none-any.whl  makepyproject.py  pyproject.toml
TPC4/: combine.py  combined.txt
TPC4/LEIA/tratamento/: lexicon_category.txt  lexicon_number.txt  tratamento1.py  tratamento2.py
TPC4/LinguaKIT/: Linguakit.py  Linguakit_categoria.txt  Linguakit_number.txt
TPC4/sentilex/: result.txt  word_freq.py
TPC5/: README.md  output  spacy_proj.py  test.txt
TPC6/: README.md  friends_proj.py  output.txt
